# deployer

./: .dockerignore  .env.example  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-writer.md
.claude/commands/: implement.md  review.md
.claude/rules/: commit.md  docker.md
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml
docs/: BRIEFING.md  DECISIONS.md  SPEC.md
infra/grafana/dashboards/: llm-operations.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/prometheus/: prometheus.yml
src/deployer/: config.py  dependencies.py  main.py
src/deployer/api/: router.py
src/deployer/api/v1/: chat.py  completions.py  health.py  metrics.py  schemas.py
src/deployer/llm/: cache.py  circuit_breaker.py  cost_calculator.py  guardrails.py  token_counter.py
src/deployer/llm/providers/: anthropic.py  base.py  openai.py
src/deployer/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  request_id.py
src/deployer/observability/: logger.py  metrics.py
tests/: conftest.py
tests/integration/: test_chat_completions.py  test_health_endpoint.py  test_metrics_endpoint.py  test_middleware.py  test_streaming.py
tests/unit/: test_cache.py  test_circuit_breaker.py  test_cost_calculator.py  test_guardrails.py  test_placeholder.py  test_rate_limiter.py  test_token_counter.py
