[project]
name = "deployer"
version = "0.1.0"
description = "Production-ready deploy template for LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic-settings>=2.9,<3",
    "httpx>=0.28,<1",
    "redis>=5.2,<6",
    "structlog>=25.1,<26",
    "tiktoken>=0.9,<1",
    "prometheus-client>=0.22,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "httpx>=0.28,<1",
    "fakeredis>=2.26,<3",
    "mypy>=1.15,<2",
    "ruff>=0.11,<1",
    "detect-secrets>=1.5,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deployer"]

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tiktoken.*", "fakeredis.*", "detect_secrets.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff.lint.isort]
known-first-party = ["deployer"]
